--- a/tests/test_simple_cs/test_simple_cs.csproj
+++ b/tests/test_simple_cs/test_simple_cs.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <IsPackable>false</IsPackable>
-        <RootNamespace>Autowrap.CSharp.Examples.Simple.Tests</RootNamespace>
+        <RootNamespace>Autowrap.CSharp.Examples.Simple</RootNamespace>
         <LangVersion>7.3</LangVersion>
         <!--<RuntimeIdentifiers>linux-x64;linux-x86;windows-x64;windows-x86;osx-x64</RuntimeIdentifiers>-->
         <RuntimeIdentifiers>linux-x64</RuntimeIdentifiers>
